--- a/deploy.yaml
+++ b/deploy.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: custom
         image: manipal2209/capstone_01_image:latest
+        imagePullPolicy: Always
 
         ports:
         - containerPort: 80
