--- a/deploy.yaml
+++ b/deploy.yaml
@@ -14,10 +14,14 @@ spec:
       labels:
         app: custom
     spec:
+      imagePullSecret:
+      -name: my-registry-key
       containers:
       - name: custom
-        image: manipal2209/capstone_01_image
+        image: manipal2209/capstone_01_image:latest
         imagePullPolicy: Always
+        
+        
 
         ports:
         - containerPort: 80
