--- a/deploy.yaml
+++ b/deploy.yaml
@@ -17,7 +17,8 @@ spec:
       containers:
       - name: custom
         image: manipal2209/capstone_01_image:latest
-        imagePullPolicy: Always
+        imagePullSecrets:
+        - name: regcred
         
         
 
